# qaestro

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: module-conventions.instructions.md
.github/workflows/: ci.yml
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/agents/morpheus/: charter.md  history.md
.squad/agents/neo/: charter.md  history.md
.squad/agents/oracle/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/agents/tank/: charter.md  history.md
.squad/agents/trinity/: charter.md  (+1 more)
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
docs/: ARCHITECTURE.md  BACKLOG.md  MODULE_REQUIREMENTS.md  PRODUCT_POSITIONING.md  PROJECT_STRUCTURE.md  TECH_DECISIONS.md
docs/notes/: PR_REVIEW_LIFECYCLE.md
src/: __init__.py
src/adapters/: __init__.py
src/app/: __init__.py  jobs.py  queue_factory.py
src/core/: __init__.py
src/runtime/: __init__.py  stages.py
src/shared/: __init__.py  config.py  logging.py  tracing.py
tests/: test_contracts.py  test_entrypoints.py  test_shared.py
tests/app/: test_gateway_worker_e2e.py  test_queue_factory.py
tests/core/: test_analyzer.py  test_strategy.py
tests/fixtures/: github_ci_completed_failure.json  github_ci_completed_success.json  github_pr_comment.json  github_pr_opened.json  github_pr_review_approved.json  github_pr_synchronize.json
tests/replay/: __init__.py  test_replay_github.py
tests/runtime/: test_ci_context_provider.py  test_github_tools.py  test_orchestrator.py  test_pr_aggregate.py  test_pr_context_provider.py  test_tool_package_structure.py  test_tool_pr_adapters.py  test_tools.py  test_workflow_stages.py
(+64 files in other folders)
