[project]
name = "devclaw"
version = "0.1.0"
description = "Embedded QA Agent for Agentic Development Environments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
devclaw-gateway = "src.app.gateway:main"
devclaw-worker = "src.app.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── Ruff (linter + formatter) ──────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── Mypy (type checker) ────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
mypy_path = "."
packages = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

# ── Pytest ─────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-q",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "integration: marks tests requiring external services",
    "e2e: marks end-to-end tests",
    "slow: marks slow-running tests",
]
